--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -83,6 +83,10 @@
                 height: 70px;
             }
 
+            img {
+                border-radius: 20px;
+            }
+
            
 
             div {
@@ -93,9 +97,25 @@
                 display: flex;
                 align-items: center;
                 flex-direction: column;
+                text-align: center;
 
                 h3 {
                     margin-top: 40px;
+
+                    @include tablet {
+                        margin-top: 30px;
+                        font-size: 15px;
+                    }
+
+                    @include mobile {
+                        margin-top: 30px;
+                        font-size: 13px;
+                    }
+
+                    @include tMobile {
+                        margin-top: 10px;
+                        font-size: 9px;
+                    }
                 }
 
                 div {
@@ -105,6 +125,18 @@
                     justify-content: space-around;
                     flex-direction: row;
 
+                    @include tablet {
+                        margin-top: 27px;
+                    }
+
+                    @include mobile {
+                        margin-top: 26px;
+                    }
+
+                    @include tMobile {
+                        margin-top: 20px;
+                    }
+
                     a {
                         text-decoration: none;
                         color: white;
@@ -112,6 +144,26 @@
                         background-color: rgb(75, 143, 122);
                         border-radius: 5px;
                         transition: all 0.3s ease;
+
+                        @include mobile {
+                            padding: 2.5px;
+                        }
+
+                        h4 {
+
+                            @include tablet {
+                                font-size: 12px;
+                            }
+
+                            @include mobile {
+                                font-size: 10px;
+                            }
+
+                            @include tMobile {
+                                font-size: 9px;
+                            }
+                            
+                        }
 
                         &:hover {
                             transform: scale(1.05);
